assets/sass/components/header/_video-bg.scss
.video-background {
  background: #000;
  position: fixed;
  top: -20px;
  right: 0;
  left: 0;
  bottom: -20px;
  z-index: -99;
}

.video-foreground {
  position: relative;
  padding-bottom: 56.25%;
  overflow: hidden;
  max-width: 100%;
  height: auto;
}

.video-background iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
}


@media (min-aspect-ratio: 16/9) {
  .video-foreground { height: 300%; top: -100%; }
}
@media (max-aspect-ratio: 16/9) {
  .video-foreground { width: 300%; left: -100%; }
}

@media only screen and (max-width: 768px) {
  .video-background {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
  }
}

